<resources>
    <string name="app_name">UST Faculty of Arts and Letters</string>
    <string name="todo">TODO</string>
    <string name="_1896">1896</string>
    <string name="saint_thomas_more">Saint Thomas More</string>
    <string name="prof_michael_anthony_c_vasco_phd">Prof. Michael Anthony C. Vasco, PhD</string>
    <string name="rev_fr_rodel_e_aligan_op_sthd">Rev. Fr. Rodel E. Aligan, OP, SThD</string>
</resources>
